<com.myapps.playnation.Operations.FlyOutContainer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_pattern"
        android:orientation="vertical" >

        <Button
            style="@style/MenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="onHome_click"
            android:text="@string/homeString" />

        <Button
            style="@style/MenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="onGames_click"
            android:text="@string/gamesString" />

        <Button
            style="@style/MenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="onGroups_click"
            android:text="@string/groupString" />

        <Button
            style="@style/MenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="onNews_click"
            android:text="@string/newsString" />

        <Button
            style="@style/MenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="onPlayers_click"
            android:text="@string/playerString" />

        <Button
            style="@style/MenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="onCompanies_click"
            android:text="@string/companiesString" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#888888"
        android:gravity="center"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!-- This title strip will display the currently visible page title, as well as the page -->
            <!-- titles for adjacent pages. -->

            <android.support.v4.view.PagerTabStrip
                android:id="@+id/pager_title_strip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@drawable/background_pattern2"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                android:textColor="#fff" />
        </android.support.v4.view.ViewPager>
    </LinearLayout>
</com.myapps.playnation.Operations.FlyOutContainer>